--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = ["crates/*", "pipelined/*", "examples/ios", "tools/ci", "errors"]
 
 [features]
 default = [
+  "bevy_animation_rig",
   "bevy_audio",
   "bevy_core_pipeline",
   "bevy_gilrs",
@@ -47,6 +48,7 @@ render = [
 ]
 
 # Optional bevy crates
+bevy_animation_rig = ["bevy_internal/bevy_animation_rig"]
 bevy_audio = ["bevy_internal/bevy_audio"]
 bevy_dynamic_plugin = ["bevy_internal/bevy_dynamic_plugin"]
 bevy_gilrs = ["bevy_internal/bevy_gilrs"]
@@ -236,6 +238,15 @@ path = "examples/3d/wireframe.rs"
 [[example]]
 name = "z_sort_debug"
 path = "examples/3d/z_sort_debug.rs"
+
+# Animation
+[[example]]
+name = "custom_skinned_mesh"
+path = "examples/animation/custom_skinned_mesh.rs"
+
+[[example]]
+name = "gltf_skinned_mesh"
+path = "examples/animation/gltf_skinned_mesh.rs"
 
 # Application
 [[example]]
