--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ default = [
   "bevy_core_pipeline",
   "bevy_gilrs",
   "bevy_gltf2",
+  "bevy_gltf",
   "bevy_wgpu",
   "bevy_sprite2",
   "bevy_render2",
